# PRISM

./: .gitignore  FRONTEND_COMPLETE.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.json
.github/workflows/: ci.yml
backend/: migrate_to_faiss.py  pyproject.toml  reindex_documents.py  requirements.txt
backend/apps/api/src/: __init__.py  config.py  main.py
backend/apps/api/src/agents/: __init__.py  debate_arena.py  literature_review_generator.py  literature_reviewer.py  paper_comparator.py
backend/apps/api/src/models/: __init__.py  request.py  response.py
backend/apps/api/src/routes/: __init__.py  cache.py  chat.py  debate.py  documents.py  literature_review.py  paper_comparison.py  sessions.py
backend/apps/api/src/services/: __init__.py  academic_chunker.py  llm_cache.py  llm_provider.py  pdf_processor.py  reranker.py  session_manager.py  vector_store.py
docs/: ARCHITECTURE.md  CLICK_TO_SOURCE_FEATURE.md  DEBATE_ARENA_FEATURE.md  DEVELOPMENT_GUIDE.md  GITHUB_ACTIONS_GUIDE.md  GITHUB_ACTIONS_SETUP_CHECKLIST.md  GROQ_OPTIMIZATION_SUMMARY.md  GROUNDING_VALIDATION_FEATURE.md  IMPLEMENTATION_SUMMARY.md  IMPROVED_RETRIEVAL_STRATEGY.md  PHASE3_LITERATURE_REVIEW_DEEP_AGENT.md  QUICK_START_NEW_FEATURES.md  RATE_LIMITING_FIX.md  RERANKING_FEATURE.md  SMART_CHUNKING_FEATURE.md
frontend/: .eslintrc.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/apps/web/: README.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json
frontend/apps/web/app/: globals.css  layout.tsx
frontend/apps/web/app/(dashboard)/: layout.tsx  page.tsx
frontend/apps/web/app/(dashboard)/documents/: page.tsx
frontend/apps/web/app/(dashboard)/sessions/: page.tsx
frontend/apps/web/components/chat/: chat-container.tsx  chat-input.tsx  confidence-badge.tsx  document-selector.tsx  message.tsx  mode-selector.tsx
frontend/apps/web/components/chat/review/: paper-comparison-viewer.tsx
frontend/apps/web/components/debate/: debate-arena.tsx  debate-header.tsx  debate-round-card.tsx  debate-scoreboard.tsx  debate-team-card.tsx
frontend/apps/web/components/documents/: document-card.tsx  upload-zone.tsx
frontend/apps/web/components/layout/: header.tsx  sidebar.tsx
frontend/apps/web/components/pdf/: pdf-viewer.tsx
frontend/apps/web/components/review/: literature-review-viewer.tsx
frontend/apps/web/components/ui/: button.tsx  card.tsx  input.tsx  scroll-area.tsx
frontend/apps/web/lib/: api.ts  store.ts  utils.ts
frontend/apps/web/types/: index.ts
