[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism-backend"
version = "0.1.0"
description = "PRISM Backend - Agentic AI Platform Backend"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "langchain>=0.1.0",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "chromadb>=0.4.0",
    "tenacity>=8.2.0",
    "structlog>=23.2.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["packages", "apps"]
